--- a/css/layout.css
+++ b/css/layout.css
@@ -1,19 +1,26 @@
 /* 最初に設定ある程度 */
 #wrapper{width: 100%; position: relative; background-image: url(); background-size: cover;}
 #header-wrapper{width: 100%; position: relative; background-image: url(../../images/background/header-main.png); background-size: cover;}
-#main-wrapper{width: 100%; position: relative; background-color: #ffffff; padding-bottom: 180px; background-size: cover;}
+#main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;}
 
-.content-wrapper{
+
+/* #section1 .content-wrapper{
     width: 100%;
     position: relative;
+    background-image: url(../img/02.jpg);
 }
 
-.container{
+#section1 .container{
     position: relative;
-    padding-left: 240px;
+    max-width: 1100px;
     width: 100%;
-    padding-right: 0;
 }
+
+#section1 .content-container{
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+} */
 
 .container2{
     width: 100%;
