--- a/css/page.css
+++ b/css/page.css
@@ -1,20 +1,21 @@
 .header-bg{
-    position:absolute;
+    position:relative;
     width:100%;
     object-fit: cover;
     height:100%;
     opacity: 0.5;
 }
 .header-bg2{
-    background-image: url(../img/mouten.png);
+    background-image: url(../img/01.png);
     position: absolute;
     width:100%;
     height:100%;
+    top: 0;
 }
 .header-bg3{
     position:absolute;
     width:100%;
     object-fit: cover;
     height:100%;
-    opacity: 0.9;
+    opacity: 0.8;
 }
