--- a/css/page.css
+++ b/css/page.css
@@ -19,3 +19,11 @@
     height:100%;
     opacity: 0.8;
 }
+
+#section1 {
+    background-color: black; /* カラーフィルタ効果の色を指定 */
+}
+
+#section1 {
+    background-color: black; /* カラーフィルタ効果の色を指定 */
+}
