--- a/css/flame.css
+++ b/css/flame.css
@@ -30,6 +30,11 @@
 .pr-3{padding-right: 3%;}
 .pr-4{padding-right: 4%;}
 .pr-5{padding-right: 5%;}
+.pl-1{padding-left: 1%;}
+.pl-2{padding-left: 2%;}
+.pl-3{padding-left: 3%;}
+.pl-4{padding-left: 4%;}
+.pl-5{padding-left: 5%;}
 
 /* margin */
 .ma{margin: auto;}
