--- a/css/layout.css
+++ b/css/layout.css
@@ -51,6 +51,27 @@ body{
     width: 100%;
 }
 
+#section3 .content-wrapper{
+    width: 100%;
+    position: relative;
+    background-image: url(../img/04.jpg);
+    opacity: 0.9;
+}
+
+#section3 .container{
+    position: relative;
+    max-width: 1100px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.692);
+    margin: auto;
+}
+
+#section3 .content-container{
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+}
+
 
 
 .container2{
