--- a/css/layout.css
+++ b/css/layout.css
@@ -62,11 +62,32 @@ body{
     position: relative;
     max-width: 1100px;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.692);
+    background-color: rgba(126, 42, 165, 0.39);
     margin: auto;
 }
 
 #section3 .content-container{
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+}
+
+#section4 .content-wrapper{
+    width: 100%;
+    position: relative;
+    background-image: url(../img/06.jpg);
+    opacity: 0.9;
+}
+
+#section4 .container{
+    position: relative;
+    max-width: 1100px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.692);
+    margin: auto;
+}
+
+#section4 .content-container{
     position: relative;
     max-width: 800px;
     width: 100%;
