--- a/css/layout.css
+++ b/css/layout.css
@@ -63,6 +63,7 @@ main {
     background-image: url(../img/04.jpg);
     background-repeat: no-repeat;
     background-size:cover;
+    background-position: right 80% bottom 70%;
     opacity: 0.9;
 }
 
@@ -85,6 +86,7 @@ main {
     position: relative;
     background-image: url(../img/06.jpg);
     background-size:cover;
+    background-position: right 50% bottom 50%;
     opacity: 0.9;
 }
 
