--- a/css/page.css
+++ b/css/page.css
@@ -29,22 +29,24 @@
     background-color: black; /* カラーフィルタ効果の色を指定 */
 }
 
-nav ul li {
-    position: relative;
-    border: solid 1px #dde664cc;
-    background: linear-gradient(#a9e664e8, #91e5bbea);
-    padding: 0 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.705);
-    color: white;
-}
+    header ul {
+        max-width: 700px;
+        margin-left: auto;
+    }
 
-.v-application nav ul li a{
+    ul li {
+        display: block;
+        position: relative;
+        font-weight: 400;
+        font-family: proxima-nova,sans-serif;
+        font-size: 14px;
+        letter-spacing: .1em;
+        overflow: hidden;
+        color: white;
+    }
+
+.v-application ul li a{
     color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
 }
 
 @media screen and (max-width: 480px) {
