メインビジュアル調整

--- a/css/reset.css
+++ b/css/reset.css
@@ -30,7 +30,7 @@ button,button::before,button::after {-webkit-box-sizing: border-box; -moz-box-si
 button:hover{cursor: pointer;}
 ul, ol, li{list-style: none;}
 table {border-collapse:collapse; border-spacing:0;}
-img{max-width: 100%; height: auto;}
+img{width: 100%; height: auto;}
 hr {display:block; height:1px; border:0; border-top:1px solid #cccccc; margin:1em 0; padding:0;}
 
 /* reset
