--- a/css/flame.css
+++ b/css/flame.css
@@ -2,6 +2,8 @@
 
 .none{display: none;}
 .w-100{width: 100%}
+.w-50{width: 50%}
+.w-30{width: 30%}
 .text-white{color: white;}
 /* padding */
 .p-0{padding: 0;}
