--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 最初に設定ある程度
 #wrapper{width: 100%; position: relative; background-image: url(); background-size: cover;}
-#header-wrapper{width: 100%; position: relative; background-image: url(); background-size: cover;}
+#header-wrapper{width: 100%; position: relative; background-image: url(); background-size: cover; background-color: black;}
 #main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;}
 @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
 body #wrapper{
@@ -9,6 +9,7 @@ body #wrapper{
     letter-spacing: .1em;
     line-height: 1.5;
     background-color: black;
+    font-style: italic;
 }
 main {
     transform: translate(0, -5px);
@@ -16,7 +17,7 @@ main {
 #section1 .content-wrapper{
     width: 100%;
     position: relative;
-    /* background-image: url(../img/03.jpg); */
+    background-image: url(../img/03.jpg);
     background-size:cover;
     background-position: right 75% bottom 50%;
     opacity: 0.9;
@@ -26,9 +27,11 @@ main {
     /* position: relative;
     max-width: 1100px;
     width: 100%;
-    background-color: rgba(165, 42, 42, 0.39);
     margin: auto; */
-    padding: 0 9.375vw 0 6.25vw;
+    background-color: rgba(0, 0, 0, 0.646);
+    padding: 20px 9.375vw 0 6.25vw;
+    flex-direction: row-reverse;
+
 }
 
 #section1 .content-container1{
@@ -115,12 +118,6 @@ main {
     width: 100%;
     position: relative;
     padding-left: 240px;
-}
-
-.content-container{
-    width: 100%;
-    max-width: 1100px;
-    margin: auto;
 }
 
 a{
