--- a/css/page.css
+++ b/css/page.css
@@ -4,6 +4,7 @@
     object-fit: cover;
     height:100%;
     opacity: 0.5;
+    min-height: 85vh;
 }
 .header-bg2{
     background-image: url(../img/01.png);
@@ -18,6 +19,7 @@
     width:100%;
     object-fit: cover;
     height:100%;
+    min-height: 85vh;
     opacity: 0.8;
 }
 
