--- a/css/layout.css
+++ b/css/layout.css
@@ -9,10 +9,14 @@ body #wrapper{
     letter-spacing: .1em;
     line-height: 1.5;
     background-color: black;
-    font-style: italic;
+    word-break: break-all;
+    /* font-style: italic; */
 }
 main {
     transform: translate(0, -5px);
+}
+#header-wrapper .container1{
+    align-items: center;
 }
 #section1 .content-wrapper{
     width: 100%;
@@ -22,38 +26,53 @@ main {
     background-position: right 75% bottom 50%;
     opacity: 0.9;
 }
+.sec-wrapper {
+    background-color: rgba(0, 0, 0, 0.646);
+    padding-bottom: 10%;
+}
 
 #section1 .container1{
-    /* position: relative;
-    max-width: 1100px;
-    width: 100%;
-    margin: auto; */
-    background-color: rgba(0, 0, 0, 0.646);
-    padding: 20px 6.25vw 0 6.25vw;
+    padding: 50px 6.25vw 0 6.25vw;
     flex-direction: row-reverse;
-
+    position: relative;
 }
 
 #section1 .content-container1{
-    position: relative;
-    max-width: 800px;
-    width: 100%;
+    padding-left: 4.375vw;
+    padding-right: 7.375vw;
+    max-width: 700px;
 }
-
+#section1 .content-container2{
+    padding-right: 7.375vw;
+    padding-left: 4.375vw;
+    margin-left: auto;
+    max-width: 700px;
+}
 
 
 #section2 .content-wrapper{
     width: 100%;
     position: relative;
-    background-image: url(../img/02.jpg);
+    /* background-image: url(../img/02.jpg); */
     background-size:cover;
     background-position: right 75% bottom 50%;
     opacity: 0.9;
 }
+#section2 .content-wrapper .filter{
+    content: "";
+    display: block;
+    position: absolute;
+    background: inherit;
+    background-image: url(../img/02.jpg);
+    top: 0;
+    bottom: 0%;
+    right: 0;
+    left: 0;
+  }
 
 #section2 .container1{
     position: relative;
-    background-color: rgba(0, 0, 0, 0.7);
+    /* background-color: rgba(0, 0, 0, 0.7); */
     margin: auto;
     padding: 20px 6.25vw 0 6.25vw;
 }
@@ -66,22 +85,21 @@ main {
 #section3 .content-wrapper{
     width: 100%;
     position: relative;
-    background-image: url(../img/04.jpg);
+    /* background-image: url(../img/14.png); */
     background-repeat: no-repeat;
-    background-size:cover;
-    background-position: right 80% bottom 70%;
+    /* background-size:cover; */
+    /* background-position: right 80% bottom 70%; */
     opacity: 0.9;
 }
 
 #section3 .container1{
     position: relative;
-    padding: 20px 6.25vw 0 6.25vw;
-    background-color: rgba(0, 0, 0, 0.673);
+    padding: 20px 6.25vw 0px 6.25vw;
+    /* background-color: rgba(0, 0, 0, 0.673); */
 }
 
 #section3 .content-container{
     position: relative;
-    max-width: 1100px;
     width: 100%;
     margin: auto;
 }
