--- a/css/page.css
+++ b/css/page.css
@@ -3,8 +3,8 @@
     width:100%;
     object-fit: cover;
     height:100%;
-    opacity: 0.5;
-    min-height: 85vh;
+    opacity: 0.4;
+    min-height: 70vh;
 }
 .header-bg2{
     background-image: url(../img/01.png);
@@ -19,8 +19,8 @@
     width:100%;
     object-fit: cover;
     height:100%;
-    min-height: 85vh;
-    opacity: 0.8;
+    min-height: 70vh;
+    opacity: 0.9;
 }
 
 #section1 {
@@ -32,8 +32,11 @@
 }
 
     header ul {
-        max-width: 700px;
+        /* max-width: 700px; */
         margin-left: auto;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
     }
 
     ul li {
@@ -53,11 +56,23 @@
 table {
     margin: auto;
 }
+#section1 .ajust {
+    margin-left: 30vw;
+}
+#section2 .ajust {
+    margin-left: 20vw;
+}
+#section2 .ajust2 {
+    margin-left: 5vw;
+}
 @media screen and (max-width: 480px) {
     #video1 {
         height: 170vw;
     }
-    .v-application nav ul {
+    /* .v-application nav ul {
         padding: 0 20%;
+    } */
+    #section1 .ajust {
+        margin: 0;
     }
 }
