--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 最初に設定ある程度
-#wrapper{width: 100%; position: relative; background-image: url(); background-size: cover;}
+#wrapper{width: 100%; height: 100%; position: relative; background-image: url(); background-size: cover;}
 #header-wrapper{width: 100%; position: relative; background-image: url(); background-size: cover; background-color: black;}
 #main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;}
 @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
@@ -105,13 +105,14 @@ main {
 }
 
 #section4 .content-wrapper{
-    width: 100%;
+    width:100%;
+    height:100%;
     position: relative;
-    background-image: url(../img/06.jpg);
-    background-size:cover;
-    background-position: right 50% bottom 50%;
+    background-image: url(../img/01.png);
+    /* background-size:cover;
+    background-position: right 50% bottom 50%; */
     opacity: 0.9;
-    background-color: rgba(0, 0, 0, 0.692);
+    /* background-color: rgba(0, 0, 0, 0.692); */
 }
 
 #section4 .container1{
@@ -126,7 +127,16 @@ main {
     max-width: 800px;
     width: 100%;
 }
-
+#section5 .content-wrapper{
+    width:100%;
+    height:100%;
+    position: relative;
+    background-image: url(../img/01.png);
+    /* background-size:cover;
+    background-position: right 50% bottom 50%; */
+    opacity: 0.9;
+    /* background-color: rgba(0, 0, 0, 0.692); */
+}
 
 
 .container2{
