--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 最初に設定ある程度
-#wrapper{width: 100%; height: 100%; position: relative; background-image: url(); background-size: cover;}
+#wrapper{width: 100%; height: 100%; position: relative; background-image: url(); background-size: cover;overflow: hidden;}
 #header-wrapper{width: 100%; position: relative; background-image: url(); background-size: cover; background-color: black;}
 #main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;}
 @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
@@ -10,7 +10,7 @@ body #wrapper{
     line-height: 1.5;
     background-color: black;
     word-break: break-all;
-    /* font-style: italic; */
+    overflow: hidden;
 }
 main {
     transform: translate(0, -5px);
@@ -28,7 +28,7 @@ main {
 }
 .sec-wrapper {
     background-color: rgba(0, 0, 0, 0.646);
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 }
 
 #section1 .container1{
@@ -119,7 +119,7 @@ main {
     position: relative;
     max-width: 1100px;
     width: 100%;
-    margin: auto;
+    margin: 0 auto 5% auto;
 }
 
 #section4 .content-container{
@@ -163,6 +163,13 @@ sub {
     font-size: smaller;
 }
 
+footer .container1{
+    padding: 50px 6.25vw 0 6.25vw;
+    flex-direction: row-reverse;
+    position: relative;
+}
+
+
 
 
 /* 特別なレイアウト */
@@ -184,5 +191,16 @@ header .content-container{
         width: 100%;
         position: relative;
         padding-left: 0px;
+    }
+    #section1 .content-container1{
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 700px;
+    }
+    #section1 .content-container2{
+        padding-right: 0;
+        padding-left: 0;
+        margin-left: auto;
+        max-width: 700px;
     }
 }
