--- a/css/page.css
+++ b/css/page.css
@@ -4,7 +4,7 @@
     object-fit: cover;
     height:100%;
     opacity: 0.4;
-    min-height: 70vh;
+    min-height: 610px;
 }
 .header-bg2{
     background-image: url(../img/01.png);
@@ -19,7 +19,7 @@
     width:100%;
     object-fit: cover;
     height:100%;
-    min-height: 70vh;
+    min-height: 610px;
     opacity: 0.9;
 }
 
