--- a/css/flame.css
+++ b/css/flame.css
@@ -4,7 +4,7 @@
 .w-100{width: 100%}
 .w-50{width: 50%}
 .w-30{width: 30%}
-.text-white{color: white;}
+.text-white{color: white!important;}
 /* padding */
 .p-0{padding: 0;}
 .p-2{padding: 10px 20px;}
