--- a/css/flame.css
+++ b/css/flame.css
@@ -19,6 +19,7 @@
 .px-0{padding-right: 0;padding-left: 0;}
 .px-1{padding-right: 10px;padding-left: 10px;}
 .px-2{padding-right: 20px;padding-left: 20px;}
+.px-4{padding-right: 4%;padding-left: 4%;}
 .px-5{padding-right: 5%;padding-left: 5%;}
 .pb-1{padding-bottom: 1%;}
 .pb-2{padding-bottom: 2%;}
@@ -114,6 +115,8 @@
 .indent_1{text-indent: -1em; margin-left:1em;}
 .z-0{z-index: 0;}
 .z-1{z-index: 1;}
+.z-2{z-index: 2;}
+
 .w10{width: 10%;}
 .w12{width: 12.5%;}
 .w20{width: 20%;}
