--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 最初に設定ある程度
 #wrapper{width: 100%; height: 100%; position: relative; background-image: url(); background-size: cover;overflow: hidden;}
 #header-wrapper{width: 100%; position: relative; background-image: url(); background-size: cover; background-color: black;}
-#main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;}
+#main-wrapper{width: 100%; position: relative; background-color: transparent; background-size: cover;padding-bottom: 130px;}
 @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
 body #wrapper{
     color: white;
@@ -131,9 +131,9 @@ footer{
 }
 
 #section3 .container1{
-    position: relative;
-    padding: 20px 6.25vw 0px 6.25vw;
-    /* background-color: rgba(0, 0, 0, 0.673); */
+    margin-bottom: 20px;
+    align-items: center;
+    overflow: hidden;
 }
 
 #section3 .content-container{
@@ -224,7 +224,9 @@ header .content-container{
         width: 100%;
         padding-right: 0;
     }
-
+    #main-wrapper{
+        padding-bottom: 70px;
+    }
     .container2{
         width: 100%;
         position: relative;
