--- a/mypage/css/layout.css
+++ b/mypage/css/layout.css
@@ -55,7 +55,7 @@ footer{
 #section1 .content-wrapper{
     width: 100%;
     position: relative;
-    background-image: url(../img/03.jpg);
+    background-image: url(/mypage/img/03.jpg);
     background-size:cover;
     background-position: right 75% bottom 50%;
     opacity: 0.9;
@@ -97,7 +97,7 @@ footer{
     display: block;
     position: absolute;
     background: inherit;
-    background-image: url(../img/02.jpg);
+    background-image: url(/mypage/img/02.jpg);
     top: 0;
     bottom: 0%;
     right: 0;
@@ -146,7 +146,7 @@ footer{
     width:100%;
     height:100%;
     position: relative;
-    background-image: url(../img/01.png);
+    background-image: url(/mypage/img/01.png);
     /* background-size:cover;
     background-position: right 50% bottom 50%; */
     opacity: 0.9;
@@ -169,7 +169,7 @@ footer{
     width:100%;
     height:100%;
     position: relative;
-    background-image: url(../img/01.png);
+    background-image: url(/mypage/img/01.png);
     /* background-size:cover;
     background-position: right 50% bottom 50%; */
     opacity: 0.9;
