--- a/assets/css/flame.css
+++ b/assets/css/flame.css
@@ -131,12 +131,12 @@
 .w50{width: 50%;}
 .w100{width: 100%;}
 .pc {display: block;}
-.sp-only{display: none;}
+.sp-only{display: none!important;}
 .sp48-only{display: none;}
 .sp-only-f{display: none;}
 @media screen and (max-width: 768px) {
-    .pc-only{display: none;}
-    .sp-only{display: block;}
+    .pc-only{display: none!important;}
+    .sp-only{display: block!important;}
     .sp-only-f{display: flex;}
 }
 @media screen and (max-width: 480px) {
