--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -30,29 +30,17 @@ ul li {
     letter-spacing: .02em;
     line-height: 1.3;
     white-space: nowrap;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .adjust {
-    margin-left: 20vw;
+    margin-left: 10vw;
 }
 
 .adjust2 {
     margin-left: 5vw;
 }
 
-.tab {
-    color: #e0e4e4;
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 16px;
-    font-family: Montserrat;
-    font-weight: 100;
-    font-size: 6vw;
-    line-height: 1;
-    letter-spacing: 0;
-    margin-bottom: 30px;
-}
 .para {
     font-size: 14px;
     letter-spacing: .1em;
@@ -67,12 +55,15 @@ ul li {
     font-family: "\6E38\660E\671D\4F53",Yu Mincho,YuMincho,"\30D2\30E9\30AE\30CE\660E\671D Pro",Hiragino Mincho Pro,"Noto Serif JP",serif;
     font-weight: 600;
     font-size: 20px;
-    letter-spacing: .4em;
+    letter-spacing: .2em;
     line-height: 2;
     white-space: nowrap;
 }
 
 @media screen and (max-width: 768px) {
+    .link {
+        font-size: 4vw;
+    }
     .para {
         line-height: 2;
     }
@@ -92,22 +83,30 @@ ul li {
         margin: auto;
         margin-bottom: 100px;
     }
-    .ul .li {
-        width: 250px;
-    }
     .footer-content {
         flex-wrap: wrap;
     }
     .footer {
         padding-top: 0;
     }
+    .message {
+        margin: 0;
+        font-size: 28px;
+        text-align: center;
+    }
+    .adjust {
+        margin-left: 0;
+    }
 }
 @media screen and (max-width: 480px) {
-    #video1 {
-        min-height: 300px;
+    .link {
+        font-size: 5vw;
     }
-    #video2 {
-        min-height: 300px;
+    .message {
+        font-size: 5.2vw;
+    }
+    .adjust {
+        margin-left: 0;
     }
     #name-logo {
         width: 40%;
